@@ -1,8 +1,14 @@
-from django.conf.urls.defaults import *
+from django.conf.urls.defaults import patterns, url
 
+from allauth.socialaccount.providers.oauth2.urls import default_urlpatterns
+
+from models import FacebookProvider
 import views
 
-urlpatterns = patterns('',
-   url('^facebook/login/$', views.login, name="facebook_login"),
+urlpatterns = default_urlpatterns(FacebookProvider)
+
+urlpatterns += patterns('',
+   url('^facebook/login/token/$', views.login_by_token, 
+       name="facebook_login_by_token"),
    url('^facebook/channel/$', views.channel, name='facebook_channel'),
    )
