@@ -1,6 +1,11 @@
 from allauth.socialaccount import providers
 from allauth.socialaccount.providers.base import ProviderAccount
 from allauth.socialaccount.providers.oauth2.models import OAuth2Provider
+from allauth.socialaccount.app_settings import QUERY_EMAIL
+
+class Scope:
+    USERINFO_PROFILE = 'https://www.googleapis.com/auth/userinfo.profile'
+    USERINFO_EMAIL = 'https://www.googleapis.com/auth/userinfo.email'
 
 
 class GoogleAccount(ProviderAccount):
@@ -20,5 +25,11 @@ class GoogleProvider(OAuth2Provider):
     name = 'Google'
     package = 'allauth.socialaccount.providers.google'
     account_class = GoogleAccount
+
+    def get_default_scope(self):
+        scope = [Scope.USERINFO_PROFILE]
+        if QUERY_EMAIL:
+            scope.append(Scope.USERINFO_EMAIL)
+        return scope
 
 providers.registry.register(GoogleProvider)
